chopish boshlandi
