# internal/controller/handlers/addreess.go
@@ -3,11 +3,10 @@ package handlers
 import (
 	pbp "api_gateway/genproto/carpet_service"
 	"api_gateway/internal/domain"
-	token "api_gateway/internal/pkg/jwt"
-	"fmt"
+	"net/http"
+
 	"github.com/gin-gonic/gin"
 	"github.com/spf13/cast"
-	"net/http"
 )
 
 // CreateAddressHandler   godoc
@@ -224,173 +223,173 @@ func (h *Handler) GetAddressHandler(ctx *gin.Context) {
 	handleResponse(ctx, h.log, "SUCCESSES", http.StatusOK, response)
 }
 
-// User Ning malumotlari
+// // User Ning malumotlari
 
-// CreateAddressForUserHandler   godoc
-// @Router       /api/user_address [POST]
-// @Security     ApiKeyAuth
-// @Summary      User_Address
-// @Description  User_Address
-// @Tags         User_Address
-// @Accept       json
-// @Produce      json
-// @Param        address body domain.AddressForUserRequest true "Address  Request"
-// @Success      200  {object}  map[string]string
-// @Failure      400  {object}  domain.Response
-// @Failure      404  {object}  domain.Response
-// @Failure      500  {object}  domain.Response
-func (h *Handler) CreateAddressForUserHandler(ctx *gin.Context) {
-	var (
-		payload domain.AddressForUserRequest
-		err     error
-	)
+// // CreateAddressForUserHandler   godoc
+// // @Router       /api/user_address [POST]
+// // @Security     ApiKeyAuth
+// // @Summary      User_Address
+// // @Description  User_Address
+// // @Tags         User_Address
+// // @Accept       json
+// // @Produce      json
+// // @Param        address body domain.AddressForUserRequest true "Address  Request"
+// // @Success      200  {object}  map[string]string
+// // @Failure      400  {object}  domain.Response
+// // @Failure      404  {object}  domain.Response
+// // @Failure      500  {object}  domain.Response
+// func (h *Handler) CreateAddressForUserHandler(ctx *gin.Context) {
+// 	var (
+// 		payload domain.AddressForUserRequest
+// 		err     error
+// 	)
 
-	err = ctx.ShouldBindJSON(&payload)
-	if err != nil {
-		handleResponse(ctx, h.log, "error is while reading user information by  body ---~~~~~~~ERROR===", http.StatusBadRequest, err.Error())
-		return
-	}
+// 	err = ctx.ShouldBindJSON(&payload)
+// 	if err != nil {
+// 		handleResponse(ctx, h.log, "error is while reading user information by  body ---~~~~~~~ERROR===", http.StatusBadRequest, err.Error())
+// 		return
+// 	}
 
-	userId, err := token.GetUserIdByClaims(ctx, h.log)
-	if err != nil {
-		handleResponse(ctx, h.log, "error is while reading userId from authorization ---~~~~~~~ERROR===", http.StatusUnauthorized, err)
-		return
-	}
+// 	userId, err := token.GetUserIdByClaims(ctx, h.log)
+// 	if err != nil {
+// 		handleResponse(ctx, h.log, "error is while reading userId from authorization ---~~~~~~~ERROR===", http.StatusUnauthorized, err)
+// 		return
+// 	}
 
-	response, err := h.services.AddressService().CreateAddress(ctx, &pbp.AddressRequest{
-		UserId:    cast.ToString(userId),
-		Latitude:  payload.Latitude,
-		Longitude: payload.Longitude,
-	})
-	if err != nil {
-		handleResponse(ctx, h.log, "error is while create  address by  storage ---~~~~~~~ERROR===", http.StatusInternalServerError, err.Error())
-		return
-	}
-	handleResponse(ctx, h.log, "SUCCESSES", http.StatusCreated, gin.H{
-		"user": cast.ToString(userId),
-		"Address": gin.H{
-			"address": response,
-			"message": "Address added successfully",
-			"success": true,
-		},
-		"message": "User of Address added successfully",
-		"success": true,
-	})
-}
+// 	response, err := h.services.AddressService().CreateAddress(ctx, &pbp.AddressRequest{
+// 		UserId:    cast.ToString(userId),
+// 		Latitude:  payload.Latitude,
+// 		Longitude: payload.Longitude,
+// 	})
+// 	if err != nil {
+// 		handleResponse(ctx, h.log, "error is while create  address by  storage ---~~~~~~~ERROR===", http.StatusInternalServerError, err.Error())
+// 		return
+// 	}
+// 	handleResponse(ctx, h.log, "SUCCESSES", http.StatusCreated, gin.H{
+// 		"user": cast.ToString(userId),
+// 		"Address": gin.H{
+// 			"address": response,
+// 			"message": "Address added successfully",
+// 			"success": true,
+// 		},
+// 		"message": "User of Address added successfully",
+// 		"success": true,
+// 	})
+// }
 
-// UpdateAddressForUserHandler   godoc
-// @Router       /api/user_address/{id} [put]
-// @Security     ApiKeyAuth
-// @Summary      Update  User_Address
-// @Description  Updates the details of an existing User_Address .
-// @Tags         User_Address
-// @Accept       json
-// @Produce      json
-// @Param        id path string true "User_Address  ID"
-// @Param        address body domain.AddressForUserRequest true "Address Type Update Request"
-// @Success      200  {object}  map[string]string
-// @Failure      400  {object}  domain.Response
-// @Failure      404  {object}  domain.Response
-// @Failure      500  {object}  domain.Response
-func (h *Handler) UpdateAddressForUserHandler(ctx *gin.Context) {
-	var (
-		payload domain.AddressForUserRequest
-		err     error
-		id      string
-	)
+// // UpdateAddressForUserHandler   godoc
+// // @Router       /api/user_address/{id} [put]
+// // @Security     ApiKeyAuth
+// // @Summary      Update  User_Address
+// // @Description  Updates the details of an existing User_Address .
+// // @Tags         User_Address
+// // @Accept       json
+// // @Produce      json
+// // @Param        id path string true "User_Address  ID"
+// // @Param        address body domain.AddressForUserRequest true "Address Type Update Request"
+// // @Success      200  {object}  map[string]string
+// // @Failure      400  {object}  domain.Response
+// // @Failure      404  {object}  domain.Response
+// // @Failure      500  {object}  domain.Response
+// func (h *Handler) UpdateAddressForUserHandler(ctx *gin.Context) {
+// 	var (
+// 		payload domain.AddressForUserRequest
+// 		err     error
+// 		id      string
+// 	)
 
-	id = ctx.Param("id")
-	addressId, err := ParseUuId(id, h.log)
-	if err != nil {
-		handleResponse(ctx, h.log, "error is while parse to uuid  id that is address_id ---~~~~~~~ERROR===", http.StatusBadRequest, err.Error())
-		return
-	}
+// 	id = ctx.Param("id")
+// 	addressId, err := ParseUuId(id, h.log)
+// 	if err != nil {
+// 		handleResponse(ctx, h.log, "error is while parse to uuid  id that is address_id ---~~~~~~~ERROR===", http.StatusBadRequest, err.Error())
+// 		return
+// 	}
 
-	err = ctx.ShouldBindJSON(&payload)
-	if err != nil {
-		handleResponse(ctx, h.log, "Failed to parse payload body", http.StatusBadRequest, err.Error())
-		return
-	}
+// 	err = ctx.ShouldBindJSON(&payload)
+// 	if err != nil {
+// 		handleResponse(ctx, h.log, "Failed to parse payload body", http.StatusBadRequest, err.Error())
+// 		return
+// 	}
 
-	userId, err := token.GetUserIdByClaims(ctx, h.log)
-	if err != nil {
-		handleResponse(ctx, h.log, "error is while reading userId from authorization ---~~~~~~~ERROR===", http.StatusUnauthorized, err.Error())
-		return
-	}
+// 	userId, err := token.GetUserIdByClaims(ctx, h.log)
+// 	if err != nil {
+// 		handleResponse(ctx, h.log, "error is while reading userId from authorization ---~~~~~~~ERROR===", http.StatusUnauthorized, err.Error())
+// 		return
+// 	}
 
-	response, err := h.services.AddressService().UpdateAddress(ctx, &pbp.Address{
-		Id:        cast.ToString(addressId),
-		UserId:    cast.ToString(userId),
-		Longitude: payload.Longitude,
-		Latitude:  payload.Latitude,
-	})
-	if err != nil {
-		handleResponse(ctx, h.log, "Failed to update Address ", http.StatusInternalServerError, err.Error())
-		return
-	}
+// 	response, err := h.services.AddressService().UpdateAddress(ctx, &pbp.Address{
+// 		Id:        cast.ToString(addressId),
+// 		UserId:    cast.ToString(userId),
+// 		Longitude: payload.Longitude,
+// 		Latitude:  payload.Latitude,
+// 	})
+// 	if err != nil {
+// 		handleResponse(ctx, h.log, "Failed to update Address ", http.StatusInternalServerError, err.Error())
+// 		return
+// 	}
 
-	handleResponse(ctx, h.log, "SUCCESSES", http.StatusOK, gin.H{
-		"user": cast.ToString(userId),
-		"Address": gin.H{
-			"address": response,
-			"message": "Address updated successfully",
-			"success": true,
-		},
-		"message": "User of Address updated successfully",
-		"success": true,
-	})
-}
+// 	handleResponse(ctx, h.log, "SUCCESSES", http.StatusOK, gin.H{
+// 		"user": cast.ToString(userId),
+// 		"Address": gin.H{
+// 			"address": response,
+// 			"message": "Address updated successfully",
+// 			"success": true,
+// 		},
+// 		"message": "User of Address updated successfully",
+// 		"success": true,
+// 	})
+// }
 
-// GetAddressForUserHandler   godoc
-// @Router       /api/user_address/{id} [GET]
-// @Security     ApiKeyAuth
-// @Summary      User_Address
-// @Description  User_Address
-// @Tags         User_Address
-// @Accept       json
-// @Produce      json
-// @Param        id path string true "User_Address  ID"
-// @Success      200  {object}  map[string]string
-// @Failure      400  {object}  domain.Response
-// @Failure      404  {object}  domain.Response
-// @Failure      500  {object}  domain.Response
-func (h *Handler) GetAddressForUserHandler(ctx *gin.Context) {
-	var (
-		id  string
-		err error
-	)
+// // GetAddressForUserHandler   godoc
+// // @Router       /api/user_address/{id} [GET]
+// // @Security     ApiKeyAuth
+// // @Summary      User_Address
+// // @Description  User_Address
+// // @Tags         User_Address
+// // @Accept       json
+// // @Produce      json
+// // @Param        id path string true "User_Address  ID"
+// // @Success      200  {object}  map[string]string
+// // @Failure      400  {object}  domain.Response
+// // @Failure      404  {object}  domain.Response
+// // @Failure      500  {object}  domain.Response
+// func (h *Handler) GetAddressForUserHandler(ctx *gin.Context) {
+// 	var (
+// 		id  string
+// 		err error
+// 	)
 
-	id = ctx.Param("id")
-	addressId, err := ParseUuId(id, h.log)
-	if err != nil {
-		handleResponse(ctx, h.log, "error is while parse to uuid  id that is address_id ---~~~~~~~ERROR===", http.StatusBadRequest, err.Error())
-		return
-	}
-	response, err := h.services.AddressService().GetAddress(ctx, &pbp.PrimaryKey{
-		Id: cast.ToString(addressId),
-	})
-	if err != nil {
-		handleResponse(ctx, h.log, "error is while update  user by  storage ---~~~~~~~ERROR===", http.StatusInternalServerError, err.Error())
-		return
-	}
-	userId, err := token.GetUserIdByClaims(ctx, h.log)
-	if err != nil {
-		handleResponse(ctx, h.log, "error is while reading userId from authorization ---~~~~~~~ERROR===", http.StatusUnauthorized, err.Error())
-		return
-	}
+// 	id = ctx.Param("id")
+// 	addressId, err := ParseUuId(id, h.log)
+// 	if err != nil {
+// 		handleResponse(ctx, h.log, "error is while parse to uuid  id that is address_id ---~~~~~~~ERROR===", http.StatusBadRequest, err.Error())
+// 		return
+// 	}
+// 	response, err := h.services.AddressService().GetAddress(ctx, &pbp.PrimaryKey{
+// 		Id: cast.ToString(addressId),
+// 	})
+// 	if err != nil {
+// 		handleResponse(ctx, h.log, "error is while update  user by  storage ---~~~~~~~ERROR===", http.StatusInternalServerError, err.Error())
+// 		return
+// 	}
+// 	userId, err := token.GetUserIdByClaims(ctx, h.log)
+// 	if err != nil {
+// 		handleResponse(ctx, h.log, "error is while reading userId from authorization ---~~~~~~~ERROR===", http.StatusUnauthorized, err.Error())
+// 		return
+// 	}
 
-	if response.GetUserId() != cast.ToString(userId) {
-		handleResponse(ctx, h.log, "error is while get userId  not found in user", http.StatusNotFound, fmt.Errorf("user not foun in authoration"))
+// 	if response.GetUserId() != cast.ToString(userId) {
+// 		handleResponse(ctx, h.log, "error is while get userId  not found in user", http.StatusNotFound, fmt.Errorf("user not foun in authoration"))
 
-	}
-	handleResponse(ctx, h.log, "SUCCESSES", http.StatusOK, gin.H{
-		"user": cast.ToString(userId),
-		"Address": gin.H{
-			"address": response,
-			"message": "Address get successfully",
-			"success": true,
-		},
-		"message": "User of Address updated successfully",
-		"success": true,
-	})
-}
+// 	}
+// 	handleResponse(ctx, h.log, "SUCCESSES", http.StatusOK, gin.H{
+// 		"user": cast.ToString(userId),
+// 		"Address": gin.H{
+// 			"address": response,
+// 			"message": "Address get successfully",
+// 			"success": true,
+// 		},
+// 		"message": "User of Address updated successfully",
+// 		"success": true,
+// 	})
+// }
